@@ -3,53 +3,64 @@ package xyz.faewulf.diversity.mixin.buildingBundle;
 import com.llamalad7.mixinextras.injector.ModifyExpressionValue;
 import com.llamalad7.mixinextras.sugar.Local;
 import net.minecraft.ChatFormatting;
-import net.minecraft.core.component.DataComponents;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.StringTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.game.ClientboundContainerSetContentPacket;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
-import net.minecraft.util.Mth;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.InteractionResultHolder;
-import net.minecraft.world.entity.SlotAccess;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.inventory.ClickAction;
-import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.BlockItem;
 import net.minecraft.world.item.BundleItem;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.component.BundleContents;
-import net.minecraft.world.item.component.CustomData;
-import net.minecraft.world.item.component.ItemLore;
 import net.minecraft.world.item.context.UseOnContext;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
-import net.minecraft.world.item.enchantment.ItemEnchantments;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
+import org.jetbrains.annotations.NotNull;
 import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
-import xyz.faewulf.diversity.Constants;
-import xyz.faewulf.diversity.inter.ICustomBundleContentBuilder;
 import xyz.faewulf.diversity.inter.ICustomBundleItem;
+import xyz.faewulf.diversity.util.CustomEnchant;
+import xyz.faewulf.diversity.util.MissingMethod.ItemStackMethod;
 import xyz.faewulf.diversity.util.ModConfigs;
-import xyz.faewulf.diversity.util.converter;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 
 @Mixin(value = BundleItem.class, priority = 1)
 public abstract class BundleItemMixin extends Item implements ICustomBundleItem {
+
+    @Shadow
+    private static Stream<ItemStack> getContents(ItemStack $$0) {
+        return null;
+    }
+
+    @Shadow
+    private static int getWeight(ItemStack $$0) {
+        return 0;
+    }
+
+    @Shadow
+    private static int getContentWeight(ItemStack $$0) {
+        return 0;
+    }
+
     public BundleItemMixin(Properties settings) {
         super(settings);
     }
@@ -64,37 +75,49 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
         return true;
     }
 
+    //bundle tooltip
     //@ModifyConstant(method = "appendTooltip", constant = @Constant(intValue = 64, ordinal = 1))
-    @ModifyExpressionValue(method = "appendHoverText", at = @At(value = "CONSTANT", args = "intValue=64", ordinal = 1))
+    @ModifyExpressionValue(method = "appendHoverText", at = @At(value = "CONSTANT", args = "intValue=64", ordinal = 0))
     private int appendTooltipInject(int value, @Local(argsOnly = true) ItemStack stack) {
-        ItemEnchantments t = stack.getOrDefault(DataComponents.ENCHANTMENTS, ItemEnchantments.EMPTY);
-
-        AtomicInteger level = new AtomicInteger();
-        t.keySet().forEach(enchantmentRegistryEntry -> {
-            ItemEnchantments itemEnchantmentsComponent = EnchantmentHelper.getEnchantmentsForCrafting(stack);
-            if (enchantmentRegistryEntry.is(ResourceLocation.fromNamespaceAndPath(Constants.MOD_ID, "capacity"))) {
-                level.set(itemEnchantmentsComponent.getLevel(enchantmentRegistryEntry));
-            }
-        });
-
-        return Math.max(value, 64 + 64 * level.get());
+        int level = EnchantmentHelper.getItemEnchantmentLevel(CustomEnchant.CAPACITY, stack);
+        return Math.max(value, 64 + 64 * level);
     }
 
-    @Inject(method = "overrideOtherStackedOnMe", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/component/BundleContents$Mutable;tryInsert(Lnet/minecraft/world/item/ItemStack;)I"))
-    private void onClickedInject(ItemStack stack, ItemStack otherStack, Slot slot, ClickAction clickType, Player player, SlotAccess cursorStackReference, CallbackInfoReturnable<Boolean> cir, @Local BundleContents.Mutable builder) {
-        ((ICustomBundleContentBuilder) builder).setMaxSize(this.getMaxSize(player.level(), stack));
+    //modify max allowed items add to bundle
+    @ModifyExpressionValue(method = "add", at = @At(value = "CONSTANT", args = "intValue=64"))
+    private static int modifyMaxBundleValue(int original, @Local(ordinal = 0, argsOnly = true) ItemStack bundle) {
+        int level = EnchantmentHelper.getItemEnchantmentLevel(CustomEnchant.CAPACITY, bundle);
+        return 64 + level * 64;
     }
 
-    @Inject(method = "overrideStackedOnOther", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/component/BundleContents$Mutable;tryInsert(Lnet/minecraft/world/item/ItemStack;)I"))
-    private void onStackClickedInject(ItemStack stack, Slot slot, ClickAction clickType, Player player, CallbackInfoReturnable<Boolean> cir, @Local BundleContents.Mutable builder) {
-        ((ICustomBundleContentBuilder) builder).setMaxSize(this.getMaxSize(player.level(), stack));
+    //this one bugged
+    //modify max allowed items add to bundle
+    /*
+    @ModifyExpressionValue(method = "overrideStackedOnOther", at = @At(value = "CONSTANT", args = "intValue=64"))
+    private int modifyMaxBundleValue2(int original, @Local(ordinal = 0, argsOnly = true) ItemStack bundle) {
+        return 64 * 2;
     }
 
-    @Inject(method = "overrideStackedOnOther", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/component/BundleContents$Mutable;tryTransfer(Lnet/minecraft/world/inventory/Slot;Lnet/minecraft/world/entity/player/Player;)I"))
-    private void onStackClickedInject2(ItemStack stack, Slot slot, ClickAction clickType, Player player, CallbackInfoReturnable<Boolean> cir, @Local BundleContents.Mutable builder) {
-        ((ICustomBundleContentBuilder) builder).setMaxSize(this.getMaxSize(player.level(), stack));
+
+    //no needed
+    @Inject(method = "overrideOtherStackedOnMe", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/BundleItem;add(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)I"))
+    private void onClickedInject(ItemStack stack, ItemStack otherStack, Slot slot, ClickAction clickType, Player player, SlotAccess cursorStackReference, CallbackInfoReturnable<Boolean> cir) {
+        //((ICustomBundleContentBuilder) this).setMaxSize(this.getMaxSize(player.level(), stack));
+        ((ICustomBundleContentBuilder) this).setMaxSize(3);
     }
 
+    @Inject(method = "overrideStackedOnOther", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/BundleItem;add(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)I", ordinal = 0))
+    private void onStackClickedInject(ItemStack stack, Slot slot, ClickAction clickType, Player player, CallbackInfoReturnable<Boolean> cir) {
+        //((ICustomBundleContentBuilder) this).setMaxSize(this.getMaxSize(player.level(), stack));
+        ((ICustomBundleContentBuilder) this).setMaxSize(3);
+    }
+
+    @Inject(method = "overrideStackedOnOther", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/BundleItem;add(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)I"))
+    private void onStackClickedInject2(ItemStack stack, Slot slot, ClickAction clickType, Player player, CallbackInfoReturnable<Boolean> cir) {
+        //((ICustomBundleContentBuilder) this).setMaxSize(this.getMaxSize(player.level(), stack));
+        ((ICustomBundleContentBuilder) this).setMaxSize(3);
+    }
+     */
 
     @Inject(method = "use", at = @At("HEAD"), cancellable = true)
     private void use(Level world, Player user, InteractionHand hand, CallbackInfoReturnable<InteractionResultHolder<ItemStack>> cir) {
@@ -111,7 +134,7 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
     }
 
     @Override
-    public InteractionResult useOn(UseOnContext context) {
+    public @NotNull InteractionResult useOn(UseOnContext context) {
 
         if (!ModConfigs.bundle_place_mode)
             return InteractionResult.PASS;
@@ -128,13 +151,22 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
             return InteractionResult.PASS;
 
         if (world instanceof ServerLevel serverWorld && player instanceof ServerPlayer serverPlayerEntity) {
-            if (bundle.get(DataComponents.BUNDLE_CONTENTS) instanceof BundleContents bundleContentsComponent
-                    && !bundleContentsComponent.isEmpty()) {
+            if (bundle.getItem() instanceof BundleItem bundleItem && getContentWeight(bundle) > 0) {
 
-                //get all index that is blockItem
+
+                //convert into list
+                Stream<ItemStack> itemStackStream = getContents(bundle);
+                if (itemStackStream == null)
+                    return InteractionResult.PASS;
+
+                List<ItemStack> itemStackListFromBundle = new LinkedList<>(itemStackStream.toList());
+
+                //get all index from bundle's content that is blockItem
                 List<Integer> blockItemList = new ArrayList<>();
-                for (int i = 0; i < bundleContentsComponent.size(); i++) {
-                    if (bundleContentsComponent.getItemUnsafe(i).getItem() instanceof BlockItem) {
+
+                //list of BlockItem in bundle
+                for (int i = 0; i < itemStackListFromBundle.size(); i++) {
+                    if (itemStackListFromBundle.get(i).getItem() instanceof BlockItem) {
                         blockItemList.add(i);
                     }
                 }
@@ -143,15 +175,16 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
                     return InteractionResult.PASS;
 
                 //get indexOfItemInInventory based on mode value, if 2 then choose random, if 1 then choose first indexOfItemInInventory
-                int chosenIndex = getMode(bundle) == 2 ? blockItemList.get(serverPlayerEntity.getRandom().nextInt(blockItemList.size())) : blockItemList.getFirst();
+                int chosenIndex = getMode(bundle) == 2 ? blockItemList.get(serverPlayerEntity.getRandom().nextInt(blockItemList.size())) : blockItemList.get(0);
 
                 //if blockItem
-                if (bundleContentsComponent.getItemUnsafe(chosenIndex).getItem() instanceof BlockItem blockItem) {
+                if (itemStackListFromBundle.get(chosenIndex).getItem() instanceof BlockItem blockItem) {
                     //try to place it
                     InteractionResult actionResult = blockItem.useOn(context);
                     //check result Consume or SUCCESS then block is placed then -1 that block from bundle
                     if (actionResult == InteractionResult.CONSUME || actionResult == InteractionResult.SUCCESS) {
-                        removeItem(player, bundle, bundleContentsComponent, chosenIndex);
+
+                        removeItem(player, bundle, itemStackListFromBundle, chosenIndex);
 
                         BlockState blockState = blockItem.getBlock().defaultBlockState();
                         SoundEvent soundEvent = ((BlockItemInvoker) blockItem).invokeGetPlaceSound(blockState);
@@ -173,12 +206,12 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
     }
 
     @Unique
-    private void removeItem(Player player, ItemStack bundleItem, BundleContents bundleContentsComponent, int index) {
+    private void removeItem(Player player, ItemStack bundleItem, List<ItemStack> bundleContentsComponent, int index) {
         if (bundleContentsComponent.isEmpty() || bundleContentsComponent.size() < index + 1)
             return;
 
-        ItemStack itemStack = bundleContentsComponent.getItemUnsafe(index);
-        List<ItemStack> itemStacks = new ArrayList<>(bundleContentsComponent.itemCopyStream().toList());
+        ItemStack itemStack = bundleContentsComponent.get(index);
+        //List<ItemStack> itemStacks = new ArrayList<>(bundleContentsComponent.itemCopyStream().toList());
 
         if (itemStack.getCount() < 1)
             return;
@@ -187,26 +220,52 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
             return;
 
         if (itemStack.getCount() > 1) {
-            itemStacks.get(index).shrink(1);
-
-            bundleContentsComponent = new BundleContents(itemStacks);
-            bundleItem.set(DataComponents.BUNDLE_CONTENTS, bundleContentsComponent);
+            bundleContentsComponent.get(index).shrink(1);
+            //bundleItem.set(DataComponents.BUNDLE_CONTENTS, bundleContentsComponent);
+            //save data to bundle
+            saveItemListToBundle(bundleContentsComponent, bundleItem);
             return;
         }
 
         boolean isRefilled = false;
 
+        /*
         if (isRefillable(player.level(), bundleItem))
             isRefilled = refill(player, bundleItem, bundleContentsComponent, itemStacks, index);
+         */
 
         if (!isRefilled) {
-            itemStacks.remove(index);
+            bundleContentsComponent.remove(index);
             //System.out.println(itemStacks);
-            player.displayClientMessage(Component.literal("Run out of " + itemStack.getItem().getDescription().getString()), true);
+            player.displayClientMessage(Component.literal("Ran out of " + itemStack.getItem().getDescription().getString()), true);
         }
 
-        bundleContentsComponent = new BundleContents(itemStacks);
-        bundleItem.set(DataComponents.BUNDLE_CONTENTS, bundleContentsComponent);
+        //save data to bundle
+        saveItemListToBundle(bundleContentsComponent, bundleItem);
+    }
+
+    @Unique
+    private void saveItemListToBundle(List<ItemStack> itemStackList, ItemStack bundle) {
+
+        CompoundTag bundleTag = bundle.getOrCreateTag();
+
+        // Get the 'Items' ListTag, or create a new one if it doesn't exist
+        ListTag itemsTagList = new ListTag();
+
+        // Add each item from the list into the bundle's NBT data
+        for (ItemStack item : itemStackList) {
+            if (!item.isEmpty()) {
+                CompoundTag itemTag = new CompoundTag();
+                item.save(itemTag); // Save the ItemStack data into the CompoundTag
+                itemsTagList.add(itemTag); // Add the CompoundTag to the ListTag
+            }
+        }
+
+        // Update the 'Items' tag in the bundle's NBT data
+        bundleTag.put("Items", itemsTagList);
+
+        // Apply the updated NBT data back to the bundle
+        bundle.setTag(bundleTag);
     }
 
     @Unique
@@ -216,7 +275,7 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
     }
 
     @Unique
-    private boolean refill(Player player, ItemStack bundle, BundleContents bundleContentsComponent, List<ItemStack> itemStacks, int index) {
+    private boolean refill(Player player, ItemStack bundle, List<ItemStack> bundleContentsComponent, List<ItemStack> itemStacks, int index) {
 
         Inventory playerInventory = player.getInventory();
         int indexOfItemInInventory = playerInventory.findSlotMatchingItem(itemStacks.get(index));
@@ -234,9 +293,10 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
         //subtract 1 because there is 1 amount of the target item in the bundle we did not remove yet, if we remove
         //then target item will lose its position in the bundle -> no consistency
         //because of that, for the later we have to subtract 1 when increase amount of target item in the bundle
-        int usedSlotInBundle = Mth.mulAndTruncate(bundleContentsComponent.weight(), 64) - stackMultiplier;
+        //int usedSlotInBundle = Mth.mulAndTruncate(bundleContentsComponent.weight(), 64) - stackMultiplier;
+        int usedSlotInBundle = getContentWeight(bundle);
 
-        final int maxBundleSize = getMaxSize(player.level(), bundle);
+        final int maxBundleSize = 64 + 64 * EnchantmentHelper.getItemEnchantmentLevel(CustomEnchant.CAPACITY, bundle);
 
         if (usedSlotInBundle >= maxBundleSize)
             return false;
@@ -246,11 +306,12 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
         int numberOfItemWillPut = (int) Math.floor(Math.min(freeSlotInBundle, realStackSizeOfTheItemWillPutInto) * 1.0f / stackMultiplier);
 
         //decrestack
-        itemStackWillPutInto.consume(numberOfItemWillPut, player);
+        //itemStackWillPutInto.consume(numberOfItemWillPut, player);
+        ItemStackMethod.consume(itemStackWillPutInto, numberOfItemWillPut, player);
 
         //because there is already 1 item in the bundle
         itemStacks.get(index).grow(numberOfItemWillPut - 1);
-        player.level().playSound(null, player.blockPosition(), SoundEvents.DECORATED_POT_INSERT, SoundSource.PLAYERS, 0.5f, 1.0f);
+        player.level().playSound(null, player.blockPosition(), SoundEvents.BUNDLE_INSERT, SoundSource.PLAYERS, 0.5f, 1.0f);
 
         return true;
     }
@@ -260,26 +321,20 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
         if (world.isClientSide)
             return false;
 
-        ItemEnchantments itemEnchantmentsComponent = EnchantmentHelper.getEnchantmentsForCrafting(itemStack);
-        int value = itemEnchantmentsComponent.getLevel(converter.getEnchant(world, Constants.MOD_ID, "refill"));
+        int value = EnchantmentHelper.getItemEnchantmentLevel(CustomEnchant.REFILL, itemStack);
+
         return value > 0;
-    }
-
-    @Unique
-    private int getMaxSize(Level world, ItemStack itemStack) {
-        ItemEnchantments itemEnchantmentsComponent = EnchantmentHelper.getEnchantmentsForCrafting(itemStack);
-        int value = itemEnchantmentsComponent.getLevel(converter.getEnchant(world, Constants.MOD_ID, "capacity"));
-
-        return 64 + value * 64;
     }
 
     @Override
     public int getMode(ItemStack itemStack) {
 
-        CustomData customData = itemStack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY);
+        //CustomData customData = itemStack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY);
+        CompoundTag nbt = itemStack.getOrCreateTag();
 
-        if (customData.contains("diversity:mode"))
-            return customData.copyTag().getInt("diversity:mode");
+        if (nbt.contains("diversity:mode", 3))
+            return nbt.getInt("diversity:mode");
+
         return 0;
     }
 
@@ -292,16 +347,21 @@ public abstract class BundleItemMixin extends Item implements ICustomBundleItem 
             default -> "normal";
         };
 
-        itemStack.update(DataComponents.CUSTOM_DATA, CustomData.EMPTY, comp -> comp.update(currentNbt -> {
-            currentNbt.putInt("diversity:mode", mode);
-        }));
+        CompoundTag nbt = itemStack.getOrCreateTag();
 
-        itemStack.set(DataComponents.LORE, new ItemLore(new ArrayList<>() {{
-            add(Component.literal("Mode: " + modeText).withStyle(ChatFormatting.GRAY));
-        }}));
+        // Set a custom string value in the NBT data with the specified key
+        nbt.putInt("diversity:mode", mode);
 
+        CompoundTag displayTag = itemStack.getOrCreateTagElement("display");
 
+        // Create a new ListTag to hold the lore lines
+        ListTag loreTag = new ListTag();
+
+        // Add each line of lore to the ListTag as a StringTag
+        loreTag.add(StringTag.valueOf(Component.Serializer.toJson(Component.literal("Mode: " + modeText).withStyle(ChatFormatting.GRAY))));
+
+        // Set the lore tag in the display tag
+        displayTag.put("Lore", loreTag);
     }
-
 
 }
